@@ -1,0 +1,30 @@
+In order tree traversal
+3
++
+4
+root
+6
+-
+2
+*
+30
+Pre order tree traversal
+3
+4
++
+6
+2
+-
+30
+*
+root
+Post order tree traversal
+root
++
+3
+4
+*
+-
+6
+2
+30
